<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:telaAtual=".DadosColheitaActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="12">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewTituloPerda"
                style="@style/TextViewTituloTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_titulo_perda" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5">

            <TextView
                android:id="@+id/textViewToletePerda"
                style="@style/TextViewVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/texto_tolete" />

            <TextView
                android:id="@+id/textViewToleteDadoPerda"
                style="@style/TextViewValorVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/texto_valor_tolete" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5">

            <TextView
                android:id="@+id/textViewLascaPerda"
                style="@style/TextViewVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/texto_lasca" />

            <TextView
                android:id="@+id/textViewLascaDadoPerda"
                style="@style/TextViewValorVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/texto_valor_lasca" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5">

            <TextView
                android:id="@+id/textViewTocoPerda"
                style="@style/TextViewVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/texto_toco" />

            <TextView
                android:id="@+id/textViewTocoDadoPerda"
                style="@style/TextViewValorVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/texto_valor_toco" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5">

            <TextView
                android:id="@+id/textViewPonteiroPerda"
                style="@style/TextViewVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/texto_ponteiro" />

            <TextView
                android:id="@+id/textViewPonteiroDadoPerda"
                style="@style/TextViewValorVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/texto_valor_ponteiro" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5">

            <TextView
                android:id="@+id/textViewCanaInteiraPerda"
                style="@style/TextViewVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/texto_cana_inteira" />

            <TextView
                android:id="@+id/textViewCanaInteiraDadoPerda"
                style="@style/TextViewValorVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/texto_valor_cana_inteira" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5">

            <TextView
                android:id="@+id/textViewPedacoPerda"
                style="@style/TextViewVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/texto_pedaco" />

            <TextView
                android:id="@+id/textViewPedacoDadoPerda"
                style="@style/TextViewValorVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/texto_valor_pedaco" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5">

            <TextView
                android:id="@+id/textViewRepiquePerda"
                style="@style/TextViewVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/texto_repique" />

            <TextView
                android:id="@+id/textViewRepiqueDadoPerda"
                style="@style/TextViewValorVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/texto_valor_repique" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5">

            <TextView
                android:id="@+id/textViewSoqueiraPerda"
                style="@style/TextViewVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/texto_soqueira" />

            <TextView
                android:id="@+id/textViewSoqueiraDadoPerda"
                style="@style/TextViewValorVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/texto_valor_soqueira" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5">

            <TextView
                android:id="@+id/textViewNroSoqueiraPerda"
                style="@style/TextViewVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/texto_nro_soqueira" />

            <TextView
                android:id="@+id/textViewNroSoqueiraDadoPerda"
                style="@style/TextViewValorVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/texto_valor_nro_soqueira" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5">

            <TextView
                android:id="@+id/textViewTotalPerda"
                style="@style/TextViewVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/texto_total" />

            <TextView
                android:id="@+id/textViewTotalDadoPerda"
                style="@style/TextViewValorVariavelTab"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/texto_valor_total" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonSair"
                style="@style/TextViewButtonTab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_fechar" />

        </TableRow>

    </TableLayout>

</TableLayout>