<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="8dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".view.DadosPlantioActivity">

    <TextView
        android:id="@+id/textViewTituloPlantio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="22dp"
        android:layout_marginBottom="20dp"
        android:text="@string/texto_titulo_plantio" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewTituloDescr"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#000000"
            android:background="#FFF"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:text="@string/texto_titulo_descr" />

        <TextView
            android:id="@+id/textViewTituloMeta"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#000000"
            android:background="#FFF"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:text="@string/texto_titulo_meta" />

        <TextView
            android:id="@+id/textViewTituloValor"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#000000"
            android:background="#FFF"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:text="@string/texto_titulo_valor" />

        <TextView
            android:id="@+id/textViewTituloStatus"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#000000"
            android:background="#FFF"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewDescrAP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/texto_descr_ap"
            android:background="#FFF"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textViewMetaAP"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#000000"
            android:background="#FFF"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:text="@string/texto_meta_ap" />

        <TextView
            android:id="@+id/textViewValorAP"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#000000"
            android:background="#FFF"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:text="@string/texto_valor_ap" />

        <TextView
            android:id="@+id/textViewStatusAP"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#000000"
            android:background="#FF0000"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:text="@string/texto_status_ap" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewDescrMP"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:background="#FFF"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/texto_descr_mp" />

        <TextView
            android:id="@+id/textViewMetaMP"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#000000"
            android:background="#FFF"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/texto_meta_mp" />

        <TextView
            android:id="@+id/textViewValorMP"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#000000"
            android:background="#FFF"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/texto_valor_mp" />

        <TextView
            android:id="@+id/textViewStatusMP"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#000000"
            android:background="#FFFF00"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/texto_status_mp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#000"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewDescrDM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/texto_descr_dm"
            android:background="#FFF"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:textSize="20dp"
            android:textColor="#000000" />


        <TextView
            android:id="@+id/textViewValorDM"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="3"
            android:text="@string/texto_porc_dm"
            android:background="#FFF"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:textSize="20dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textViewStatusDM"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="3"
            android:background="#008000"
            android:text="@string/texto_status_dm"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:textSize="20dp"
            android:textColor="#000000" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSair"
        android:layout_marginTop="40dp"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_fechar" />

</LinearLayout>